Страница товар - Отзывы

--- a/catalogue--level2.html
+++ b/catalogue--level2.html
@@ -932,35 +932,35 @@
               <a class="catalogue__products__list__item__add_to_favourites" href="#heart"></a>
             </li>
           </ul>
-          <div class="catalogue__products__navigation">
-            <span class="catalogue__products__navigation__more button button--pink">Показать еще</span>
-            <ul class="catalogue__products__navigation__pagination">
-              <li class="catalogue__products__navigation__pagination__item">
-                <span class="catalogue__products__navigation__pagination__item__link catalogue__products__navigation__pagination__item__link--active button--pink">1</span>
+          <div class="catalogue__products__navigation navigation">
+            <span class="catalogue__products__navigation__more navigation__more button button--pink">Показать еще</span>
+            <ul class="catalogue__products__navigation__pagination navigation__pagination">
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <span class="catalogue__products__navigation__pagination__item__link navigation__pagination__item__link navigation__pagination__item__link--active button--pink">1</span>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <a class="catalogue__products__navigation__pagination__item__link" href="#">2</a>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <a class="catalogue__products__navigation__pagination__item__link navigation__pagination__item__link" href="#">2</a>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <a class="catalogue__products__navigation__pagination__item__link" href="#">3</a>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <a class="catalogue__products__navigation__pagination__item__link navigation__pagination__item__link" href="#">3</a>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <a class="catalogue__products__navigation__pagination__item__link" href="#">4</a>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <a class="catalogue__products__navigation__pagination__item__link navigation__pagination__item__link" href="#">4</a>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <a class="catalogue__products__navigation__pagination__item__link" href="#">5</a>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <a class="catalogue__products__navigation__pagination__item__link navigation__pagination__item__link" href="#">5</a>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <a class="catalogue__products__navigation__pagination__item__link" href="#">65</a>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <a class="catalogue__products__navigation__pagination__item__link navigation__pagination__item__link" href="#">65</a>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <a class="catalogue__products__navigation__pagination__item__link" href="#">777</a>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <a class="catalogue__products__navigation__pagination__item__link navigation__pagination__item__link" href="#">777</a>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <span class="catalogue__products__navigation__pagination__item__hidden_pages">...</span>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <span class="catalogue__products__navigation__pagination__item__hidden_pages navigation__pagination__item__hidden_pages">...</span>
               </li>
-              <li class="catalogue__products__navigation__pagination__item">
-                <a class="catalogue__products__navigation__pagination__item__link--arrow_right" href="#"></a>
+              <li class="catalogue__products__navigation__pagination__item navigation__pagination__item">
+                <a class="catalogue__products__navigation__pagination__item__link--arrow_right navigation__pagination__item__link--arrow_right" href="#"></a>
               </li>
             </ul>
           </div>
