--- a/product.html
+++ b/product.html
@@ -535,7 +535,111 @@
               </ul>
             </div>
           </div>
-          <div class="product__tabs__content__block product__reviews">Отзывы</div>
+          <div class="product__tabs__content__block product__tabs__content__block--reviews product__reviews">
+            <div class="product__tabs__content__block__reviews">
+              <span class="product__tabs__content__block__reviews__heading">Отзывы про Apple iPhone 14 Plus, 512 ГБ, «сияющая звезда»</span>
+              <div class="product__tabs__content__block__reviews__message">
+                <p>У нас пока нет ни одного отзыва про Смартфон Apple iPhone 14 Plus, 512 ГБ, «сияющая звезда». 
+                  Будьте первым!</p>
+                <p><b>Будьте первым!</b></p>
+              </div>
+              <span class="product__tabs__content__block__reviews__button button button--yellow">Оставить отзыв</span>
+              <div class="product__tabs__content__block__reviews__rating">
+                <span class="product__tabs__content__block__reviews__rating__text">3/5</span>
+                <div class="product__tabs__content__block__reviews__rating__stars">
+                  <span class="product__tabs__content__block__reviews__rating__stars__star icon_star icon_star--yellow"></span>
+                  <span class="product__tabs__content__block__reviews__rating__stars__star icon_star icon_star--yellow"></span>
+                  <span class="product__tabs__content__block__reviews__rating__stars__star icon_star icon_star--yellow"></span>
+                  <span class="product__tabs__content__block__reviews__rating__stars__star icon_star icon_star--grey"></span>
+                  <span class="product__tabs__content__block__reviews__rating__stars__star icon_star icon_star--grey"></span>
+                </div>
+              </div>
+              <div class="product__tabs__content__block__reviews__list">
+                <div class="product__tabs__content__block__reviews__list__item">
+                  <img class="product__tabs__content__block__reviews__list__item__image" src="../images/demo/product/review-product.png" />
+                  <div class="product__tabs__content__block__reviews__list__item__summary">
+                    <span class="product__tabs__content__block__reviews__list__item__summary__name">Юрий</span>
+                    <div class="product__tabs__content__block__reviews__list__item__summary__stars">
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--grey"></span>
+                    </div>
+                    <span class="product__tabs__content__block__reviews__list__item__summary__description">Отзыв о модели <a class="product__tabs__content__block__reviews__list__item__description__link" href="#">Apple iPhone 14 Plus, 512 ГБ, «Сияющая звезда»</a></span>
+                  </div>
+                  <div class="product__tabs__content__block__reviews__list__item__text">Наушники просто супер, глубокий бас и приличный запас громкости. Прочная конструкция и мягкая приятная кожа. Когда держишь в руках, понимаешь, что такой ценник у них не просто так)</div>
+                  <div class="product__tabs__content__block__reviews__list__item__meta">
+                    <span class="product__tabs__content__block__reviews__list__item__meta__source">Источник: Технозум</span>
+                    <span class="product__tabs__content__block__reviews__list__item__meta__date">31.01.2024</span>
+                  </div>
+                </div>
+                <div class="product__tabs__content__block__reviews__list__item">
+                  <img class="product__tabs__content__block__reviews__list__item__image" src="../images/demo/product/review-product.png" />
+                  <div class="product__tabs__content__block__reviews__list__item__summary">
+                    <span class="product__tabs__content__block__reviews__list__item__summary__name">Юрий</span>
+                    <div class="product__tabs__content__block__reviews__list__item__summary__stars">
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--grey"></span>
+                    </div>
+                    <span class="product__tabs__content__block__reviews__list__item__summary__description">Отзыв о модели <a class="product__tabs__content__block__reviews__list__item__description__link" href="#">Apple iPhone 14 Plus, 512 ГБ, «Сияющая звезда»</a></span>
+                  </div>
+                  <div class="product__tabs__content__block__reviews__list__item__text">Наушники просто супер, глубокий бас и приличный запас громкости. Прочная конструкция и мягкая приятная кожа. Когда держишь в руках, понимаешь, что такой ценник у них не просто так)</div>
+                  <div class="product__tabs__content__block__reviews__list__item__meta">
+                    <span class="product__tabs__content__block__reviews__list__item__meta__source">Источник: Технозум</span>
+                    <span class="product__tabs__content__block__reviews__list__item__meta__date">31.01.2024</span>
+                  </div>
+                </div>
+                <div class="product__tabs__content__block__reviews__list__item">
+                  <img class="product__tabs__content__block__reviews__list__item__image" src="../images/demo/product/review-product.png" />
+                  <div class="product__tabs__content__block__reviews__list__item__summary">
+                    <span class="product__tabs__content__block__reviews__list__item__summary__name">Юрий</span>
+                    <div class="product__tabs__content__block__reviews__list__item__summary__stars">
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--yellow"></span>
+                      <span class="product__tabs__content__block__reviews__list__item__summary__stars__star icon_star icon_star--grey"></span>
+                    </div>
+                    <span class="product__tabs__content__block__reviews__list__item__summary__description">Отзыв о модели <a class="product__tabs__content__block__reviews__list__item__description__link" href="#">Apple iPhone 14 Plus, 512 ГБ, «Сияющая звезда»</a></span>
+                  </div>
+                  <div class="product__tabs__content__block__reviews__list__item__text">Наушники просто супер, глубокий бас и приличный запас громкости. Прочная конструкция и мягкая приятная кожа. Когда держишь в руках, понимаешь, что такой ценник у них не просто так)</div>
+                  <div class="product__tabs__content__block__reviews__list__item__meta">
+                    <span class="product__tabs__content__block__reviews__list__item__meta__source">Источник: Технозум</span>
+                    <span class="product__tabs__content__block__reviews__list__item__meta__date">31.01.2024</span>
+                  </div>
+                </div>
+              </div>
+              <div class="product__reviews__navigation navigation">
+                <ul class="product__reviews__navigation__pagination navigation__pagination">
+                  <li class="product__reviews__navigation__pagination__item navigation__pagination__item">
+                    <span class="product__reviews__navigation__pagination__item__link navigation__pagination__item__link navigation__pagination__item__link--active button--pink">1</span>
+                  </li>
+                  <li class="product__reviews__navigation__pagination__item navigation__pagination__item">
+                    <a class="product__reviews__navigation__pagination__item__link navigation__pagination__item__link" href="#">2</a>
+                  </li>
+                  <li class="product__reviews__navigation__pagination__item navigation__pagination__item">
+                    <a class="product__reviews__navigation__pagination__item__link navigation__pagination__item__link" href="#">3</a>
+                  </li>
+                  <li class="product__reviews__navigation__pagination__item navigation__pagination__item">
+                    <a class="product__reviews__navigation__pagination__item__link navigation__pagination__item__link" href="#">4</a>
+                  </li>
+                  <li class="product__reviews__navigation__pagination__item navigation__pagination__item">
+                    <a class="product__reviews__navigation__pagination__item__link navigation__pagination__item__link" href="#">5</a>
+                  </li>
+                  <li class="product__reviews__navigation__pagination__item navigation__pagination__item">
+                    <span class="product__reviews__navigation__pagination__item__hidden_pages navigation__pagination__item__hidden_pages">...</span>
+                  </li>
+                  <li class="product__reviews__navigation__pagination__item navigation__pagination__item">
+                    <a class="product__reviews__navigation__pagination__item__link--arrow_right navigation__pagination__item__link--arrow_right" href="#"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       </section>
