Страница Товар — мобильная версия, Нет в наличии, Уценка, изменение количества, небольшая оптимизация стилей

--- a/product-markdown.html
+++ b/product-markdown.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Страница товара — ТехноЗум.рф</title>
+    <title>Страница товара (Уценка) — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -132,12 +132,13 @@
           <span class="product__helpers__stock">Есть в наличии</span>
         </div>
         <div class="product__condition">
-          <span class="product__condition__option product__condition__option--active">Новый</span>
-          <span class="product__condition__option">Уценка</span>
+          <span class="product__condition__option">Новый</span>
+          <span class="product__condition__option product__condition__option--active">Уценка</span>
         </div>
         <div class="product__guarantee">
           <span class="product__guarantee__button">Гарантия 1 год</span>
         </div>
+        <div class="product__markdown">Это уценённый товар. Причина уценки причина уценки причина уценки причина уценки причина уценки  причина уценки причина уценки причина уценки</div>
         <div class="product__gallery">
           <div class="product__gallery__preview">
             <span class="product__gallery__preview__up"></span>
@@ -221,6 +222,11 @@
           </div>
           <div class="product__buy__cart">
             <span class="product__buy__cart__add_to_cart button button--pink">Добавить в корзину</span>
+            <div class="product__buy__cart__count">
+              <span class="product__buy__cart__count__minus icon__minus cart_contents__products__item__icon"></span>
+              <span class="product__buy__cart__count__current">3</span>
+              <span class="product__buy__cart__count__plus icon__plus cart_contents__products__item__icon"></span>
+            </div>
           </div>
           <div class="product__buy__row2_buttons">
             <span class="product__buy__row2_buttons__order button button--white">Заказать в 1 клик</span>
