--- a/product-out-of-stock.html
+++ b/product-out-of-stock.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Страница товара — ТехноЗум.рф</title>
+    <title>Страница товара (нет в наличии) — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -129,7 +129,7 @@
         <h1 class="product__heading">Смартфон Apple iPhone 14 Plus, 512 ГБ, «Cияющая звезда»</h1>
         <div class="product__helpers">
           <span class="product__helpers__id">Код товара: 01908</span>
-          <span class="product__helpers__stock">Есть в наличии</span>
+          <span class="product__helpers__stock product__helpers__stock--out_of_stock">Нет в наличии</span>
         </div>
         <div class="product__condition">
           <span class="product__condition__option product__condition__option--active">Новый</span>
@@ -220,10 +220,10 @@
             <span class="product__buy__prices__old">667 000 ₽</span>
           </div>
           <div class="product__buy__cart">
-            <span class="product__buy__cart__add_to_cart button button--pink">Добавить в корзину</span>
+            <span class="product__buy__cart__out_of_stock button button--grey">Нет в наличии</span>
           </div>
           <div class="product__buy__row2_buttons">
-            <span class="product__buy__row2_buttons__order button button--white">Заказать в 1 клик</span>
+            <span class="product__buy__row2_buttons__order button button--white">Сообщить о поступлении</span>
             <span class="product__buy__row2_buttons__favourites"></span>
           </div>
           <div class="product__buy__delivery">
