--- a/cart.html
+++ b/cart.html
@@ -123,9 +123,9 @@
             </div>
             <div class="cart_contents__products__item__middle">
               <div class="cart_contents__products__item__middle__count">
-                <span class="cart_contents__products__item__middle__count__minus cart_contents__products__item__icon"></span>
+                <span class="cart_contents__products__item__middle__count__minus icon__minus cart_contents__products__item__icon"></span>
                 <span class="cart_contents__products__item__middle__count__current">3</span>
-                <span class="cart_contents__products__item__middle__count__plus cart_contents__products__item__icon"></span>
+                <span class="cart_contents__products__item__middle__count__plus icon__plus cart_contents__products__item__icon"></span>
               </div>
               <span class="cart_contents__products__item__middle__price">645 000 x 3</span>
             </div>
@@ -144,9 +144,9 @@
             </div>
             <div class="cart_contents__products__item__middle">
               <div class="cart_contents__products__item__middle__count">
-                <span class="cart_contents__products__item__middle__count__minus cart_contents__products__item__icon"></span>
+                <span class="cart_contents__products__item__middle__count__minus icon__minus cart_contents__products__item__icon"></span>
                 <span class="cart_contents__products__item__middle__count__current">3</span>
-                <span class="cart_contents__products__item__middle__count__plus cart_contents__products__item__icon"></span>
+                <span class="cart_contents__products__item__middle__count__plus icon__plus cart_contents__products__item__icon"></span>
               </div>
               <span class="cart_contents__products__item__middle__price">645 000 x 3</span>
             </div>
@@ -165,9 +165,9 @@
             </div>
             <div class="cart_contents__products__item__middle">
               <div class="cart_contents__products__item__middle__count">
-                <span class="cart_contents__products__item__middle__count__minus cart_contents__products__item__icon"></span>
+                <span class="cart_contents__products__item__middle__count__minus icon__minus cart_contents__products__item__icon"></span>
                 <span class="cart_contents__products__item__middle__count__current">3</span>
-                <span class="cart_contents__products__item__middle__count__plus cart_contents__products__item__icon"></span>
+                <span class="cart_contents__products__item__middle__count__plus icon__plus cart_contents__products__item__icon"></span>
               </div>
               <span class="cart_contents__products__item__middle__price">645 000 x 3</span>
             </div>
