Рефакторинг стилей табов на странице товара

--- a/product-out-of-stock.html
+++ b/product-out-of-stock.html
@@ -249,14 +249,14 @@
           <input class="product__tabs__radio" id="product__characteristics" type="radio" name="product__tabs" />
           <input class="product__tabs__radio" id="product__reviews" type="radio" name="product__tabs" />
           <ul class="product__tabs__list">
-            <li class="product__tabs__list__tab product__promo">
-              <label class="tabs_label" for="product__promo">Описание</label>
+            <li class="product__tabs__list__item product__promo">
+              <label class="product__tabs__list__item__label" for="product__promo">Описание</label>
             </li>
-            <li class="product__tabs__list__tab product__characteristics">
-              <label class="tabs_label" for="product__characteristics">Характеристики</label>
+            <li class="product__tabs__list__item product__characteristics">
+              <label class="product__tabs__list__item__label" for="product__characteristics">Характеристики</label>
             </li>
-            <li class="product__tabs__list__tab product__reviews">
-              <label class="tabs_label" for="product__reviews">Отзывы</label>
+            <li class="product__tabs__list__item product__reviews">
+              <label class="product__tabs__list__item__label" for="product__reviews">Отзывы</label>
             </li>
           </ul>
         <div class="product__tabs__content">
