Модальное окно — выбор города desktop

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ul>
           <ul class="header__top__container__getintouch">
             <li class="header__top__container__getintouch__item">
-              <a class="header__top__getintouch__item__link getintouch__city link--grey" href="#" alt="Выбрать город">Москва</a>
+              <span class="header__top__getintouch__item__link getintouch__city link--grey" onclick="window.City.showModal(); openDialog(event);" aria-controls="City" alt="Выбрать город">Москва</span>
             </li>
             <li class="header__top__container__getintouch__item">
               <a class="header__top__getintouch__item__link link--grey getintouch__phone change_phone" href="tel:+74996476144" alt="Телефон">+ 7 499 647-61-44</a>
@@ -607,6 +607,14 @@
         </div>
       </div>
     </footer>
+    <dialog class="popup_city popup" aria-label="Выбор города" id="City">
+      <div class="popup_city__container popup__container">
+        <span class="popup_city__container__heading">Выберите город</span>
+        <span class="popup_city__container__close" onclick="window.City.close();"></span>
+        <span class="popup_city__container__button button button--black">Москва</span>
+        <span class="popup_city__container__button button button--black">Санкт-Петербург</span>
+      </div>
+    </dialog>
     <script src="./js/custom.js"></script>
     <script src="./js/index.js"></script>
   </body>
