Popup - добавление в корзину, tooltip Корзина mobile, Добавлены ссылки на демо-страницы на главную для более удобной проверки

--- a/cart.html
+++ b/cart.html
@@ -118,7 +118,7 @@
         <ul class="cart_contents__products">
           <li class="cart_contents__products__item">
             <div class="cart_contents__products__item__left">
-              <img class="cart_contents__products__item__left__image" src="../images/cart/cart-product.png" />
+              <img class="cart_contents__products__item__left__image" src="../images/demo/cart/cart-product.png" />
               <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
             </div>
             <div class="cart_contents__products__item__middle">
@@ -134,12 +134,12 @@
                 <span class="cart_contents__products__item__right__cost__current">645 000 ₽</span>
                 <span class="cart_contents__products__item__right__cost__old">645 000 ₽</span>
               </div>
-              <span class="cart_contents__products__item__right__delete cart_contents__products__item__icon"></span>
+              <span class="cart_contents__products__item__right__delete icon--delete cart_contents__products__item__icon"></span>
             </div>
           </li>
           <li class="cart_contents__products__item">
             <div class="cart_contents__products__item__left">
-              <img class="cart_contents__products__item__left__image" src="../images/cart/cart-product.png" />
+              <img class="cart_contents__products__item__left__image" src="../images/demo/cart/cart-product.png" />
               <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
             </div>
             <div class="cart_contents__products__item__middle">
@@ -155,12 +155,12 @@
                 <span class="cart_contents__products__item__right__cost__current">645 000 ₽</span>
                 <span class="cart_contents__products__item__right__cost__old">645 000 ₽</span>
               </div>
-              <span class="cart_contents__products__item__right__delete cart_contents__products__item__icon"></span>
+              <span class="cart_contents__products__item__right__delete icon--delete cart_contents__products__item__icon"></span>
             </div>
           </li>
           <li class="cart_contents__products__item">
             <div class="cart_contents__products__item__left">
-              <img class="cart_contents__products__item__left__image" src="../images/cart/cart-product.png" />
+              <img class="cart_contents__products__item__left__image" src="../images/demo/cart/cart-product.png" />
               <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
             </div>
             <div class="cart_contents__products__item__middle">
@@ -176,7 +176,7 @@
                 <span class="cart_contents__products__item__right__cost__current">645 000 ₽</span>
                 <span class="cart_contents__products__item__right__cost__old">645 000 ₽</span>
               </div>
-              <span class="cart_contents__products__item__right__delete cart_contents__products__item__icon"></span>
+              <span class="cart_contents__products__item__right__delete icon--delete cart_contents__products__item__icon"></span>
             </div>
           </li>
         </ul>
