--- a/catalogue.html
+++ b/catalogue.html
@@ -75,6 +75,45 @@
               </li>
               <li class="header__bottom__container__column__services__item">
                 <a class="header__bottom__container__column__services__item__link link--grey link_icon--cart" href="#">Корзина</a>
+                <div class="header__bottom__container__column__services__item__cart_tooltip">
+                  <ul class="header__bottom__container__column__services__item__cart_tooltip__list">
+                    <li class="header__bottom__container__column__services__item__cart_tooltip__list__item">
+                      <a class="header__bottom__container__column__services__item__cart_tooltip__list__item__link" href="../product.html">
+                        <img class="header__bottom__container__column__services__item__cart_tooltip__list__item__link__image" src="../images/demo/cart/cart-product.png" />
+                        <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__link__count">x2</span>
+                      </a>
+                      <div class="header__bottom__container__column__services__item__cart_tooltip__list__item__text">
+                        <a class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__name" href="../product.html">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</a>
+                        <div class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__cost">
+                          <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__cost__current">645 000 ₽</span>
+                          <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__cost__old">645 000 ₽</span>
+                        </div>
+                      </div>
+                      <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__delete icon--delete"></span>
+                    </li>
+                    <li class="header__bottom__container__column__services__item__cart_tooltip__list__item">
+                      <a class="header__bottom__container__column__services__item__cart_tooltip__list__item__link" href="../product.html">
+                        <img class="header__bottom__container__column__services__item__cart_tooltip__list__item__link__image" src="../images/demo/cart/cart-product.png" />
+                        <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__link__count">x2</span>
+                      </a>
+                      <div class="header__bottom__container__column__services__item__cart_tooltip__list__item__text">
+                        <a class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__name" href="../product.html">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</a>
+                        <div class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__cost">
+                          <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__cost__current">645 000 ₽</span>
+                          <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__text__cost__old">645 000 ₽</span>
+                        </div>
+                      </div>
+                      <span class="header__bottom__container__column__services__item__cart_tooltip__list__item__delete icon--delete"></span>
+                    </li>
+                  </ul>
+                  <div class="header__bottom__container__column__services__item__cart_tooltip__summary">
+                    <div class="header__bottom__container__column__services__item__cart_tooltip__summary__cost">
+                      <span class="header__bottom__container__column__services__item__cart_tooltip__summary__cost__title">Итого:</span>
+                      <span class="header__bottom__container__column__services__item__cart_tooltip__summary__cost__current">1 290 000 ₽</span>
+                    </div>
+                    <a class="header__bottom__container__column__services__item__cart_tooltip__summary__button button button--pink" href="../cart.html">Перейти в корзину</a>
+                  </div>
+                </div>
               </li>
             </ul>
           </div>
