Попап Заказать в 1 клик Попапы выбора города и добавления товара в корзину продублированы на всех страницах Уменьшена ширина grid-колонки на странице Товар, чтобы избавиться от горизонтального скролла

--- a/pickup.html
+++ b/pickup.html
@@ -310,5 +310,38 @@
         </div>
       </div>
     </footer>
+    <dialog class="popup_city popup" aria-label="Выбор города" id="City">
+      <div class="popup_city__container popup__container">
+        <span class="popup_city__container__heading">Выберите город</span>
+        <span class="popup_city__container__close icon--close" onclick="window.City.close();"></span>
+        <span class="popup_city__container__button button button--black">Москва</span>
+        <span class="popup_city__container__button button button--black">Санкт-Петербург</span>
+      </div>
+    </dialog>
+    <dialog class="popup_cart popup" aria-label="Товар добавлен в корзину" id="Cart">
+      <div class="popup_cart__container popup__container">
+        <span class="popup_cart__container__heading">Товар добавлен в корзину</span>
+        <span class="popup_cart__container__close icon--close" onclick="window.Cart.close();"></span>
+        <div class="popup_cart__container__product">
+          <div class="popup_cart__container__product__images">
+            <a class="popup_cart__container__product__images__link" href="#">
+              <img class="popup_cart__container__product__images__link__image" src="./images/goods/vinil.png" />
+            </a>
+          </div>
+          <div class="popup_cart__container__product__text">
+            <a class="popup_cart__container__product__text__title" href="#">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм </a>
+            <div class="popup_cart__container__product__text__info">
+              <div class="popup_cart__container__product__text__info__prices">
+                <span class="popup_cart__container__product__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                <span class="popup_cart__container__product__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+              </div>
+            </div>
+          </div>
+          <a class="popup_cart__container__product__add_to_favourites--added" href="#heart"></a>
+        </div>
+        <a class="popup_cart__container__button--order button button--pink" href="../cart.html">Перейти в корзину</a>
+        <span class="popup_cart__container__button--close  button button--white" onclick="window.Cart.close();">Остатья в каталоге</span>
+      </div>
+    </dialog>
   </body>
 </html>
